--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://https://venkat2k.github.io/Book-Review-Website/templates/index.html" />
+    <meta http-equiv="refresh" content="0; url=https://venkat2k.github.io/Book-Review-Website/templates/index.html" />
   </head>
 </html>
